public class AlreadyInTreeException extends Exception{
    public AlreadyInTreeException() {
        super();
    }
}
