public enum Department {
    DERMATOLOGY,
    INTERNAL_MEDICINE,
    NEUROLOGY,
    OPHTHALMOLOGY,
    OTOLARYNGOLOGY,
    PATHOLOGY,
    PEDIATRICS,
    SURGERY
}