public class InvalidIDException extends Exception{
    public InvalidIDException() {
        super();
    }
}
