public class InvalidPrescriptionException extends RuntimeException{
    public InvalidPrescriptionException() {
        super();
    }
}
