import java.time.LocalDateTime;

public class Notification {
    Person person;
    LocalDateTime time;//appointment time Notification

    /*@Override
    public String toString() {
        return "Notification{" +
                "patient=" + patient +
                ", time=" + time +
                '}';
    }*/
}
