public interface Patient {
    void addAppointment();
    void removeAppointment();
    void viewAppointments();
    void viewPrescriptions();
}