import java.time.LocalDateTime;

public class PolyclinicAppointment extends Appointment{
    Doctor doctor;
    Department department;
    String status;
}
