public abstract class Staff extends Person {}