@startuml

title __HOSPITAL-MANAGEMENT-SYSTEM's Class Diagram__\n


    interface AdministratorInterface {
    }

  


    class AlreadyInTreeException {
    }

  


    class Appointment {
    }

  


    class BinarySearchTree {
    }

  

    class BloodTest {
    }

  


    enum Department {
    }

  


    class Doctor {
    }

  


    interface DoctorInterface {
    }

  

    class Hospital_Management_System {
    }

  


    class InvalidIDException {
    }

  


    class InvalidPrescriptionException {
    }

  


    class Notification {
    }

  


    class Nurse {
    }

  


    class OrderedList {
    }

  


    class Patient {
    }

  

    interface PatientInterface {
    }


    abstract class Person {
    }


    interface PersonInterface {
    }


    class PolyclinicAppointment {
    }


    class Prescription {
    }


    class Receptionist {
    }


    interface ReceptionistInterface {
    }


    interface Staff {
    }


    class VaccineAppointment {
    }


    class test {
    }


  Appointment .up.|> Serializable
  Appointment o-- Patient : patient
  BinarySearchTree .up.|> Serializable
  BinarySearchTree o-- E : deletedItem
  Doctor .up.|> Comparable
  Doctor .up.|> DoctorInterface
  Doctor .up.|> Staff
  Doctor -up-|> Person
  Doctor o-- Department : department
  Hospital_Management_System .up.|> Serializable
  Notification o-- Person : person
  Nurse .up.|> Staff
  Nurse -up-|> Person
  OrderedList .up.|> Iterable
  OrderedList .up.|> List
  OrderedList .up.|> Serializable
  Patient .up.|> Comparable
  Patient .up.|> PatientInterface
  Patient -up-|> Person
  Person .up.|> PersonInterface
  Person .up.|> Serializable
  PolyclinicAppointment -up-|> Appointment
  PolyclinicAppointment o-- Department : department
  PolyclinicAppointment o-- Doctor : doctor
  Receptionist .up.|> Comparable
  Receptionist .up.|> ReceptionistInterface
  Receptionist -up-|> Person
  VaccineAppointment -up-|> Appointment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
